add-full-api-category
